--- a/src/app/modules/reports/bufrication-of-os-balances-lc/bufrication-of-os-balances-lc.component.html
+++ b/src/app/modules/reports/bufrication-of-os-balances-lc/bufrication-of-os-balances-lc.component.html
@@ -1,15 +1,16 @@
 <div id="Kt-portlet-margin-top">
     <div class="kt-portlet">
-        <div class="kt-portlet__head kt-portlet__head__custom" id="list-header" style="display: flex;flex-direction: row;justify-content: space-between; margin-bottom: 10px;">
+        <div class="kt-portlet__head kt-portlet__head__custom" id="list-header"
+             style="display: flex;flex-direction: row;justify-content: space-between; margin-bottom: 10px;">
             <div class="kt-portlet__head-label">
                 <h3 class="heading">Bifurcation of OS balances LC</h3>
             </div>
             <!-- <span (click)="close(0)"><mat-icon>close</mat-icon></span> -->
-           
-            
+
+
         </div>
     </div>
-  
+
     <form [formGroup]="bufricationForm" class="kt-form kt-form--group-seperator-dashed">
 
         <div class="kt-form">
@@ -17,72 +18,79 @@
             <div class="kt-portlet__body">
 
                 <div class="col-lg-12">
-                  <div class="form-group kt-form__group row">
+                    <div class="form-group kt-form__group row">
 
-                    <div class="col-lg-6 kt-margin-bottom-20-mobile">
-                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline" *ngIf="single_zone">
-                            <mat-label class="customMatLabel">Zone</mat-label>
-                            <mat-select [(ngModel)]="selected_z" formControlName="ZoneId" [disabled]="disable_zone">
-                                <mat-option [value]="SelectedZones?.ZoneId">
-                                    {{SelectedZones?.ZoneName}}
-                                </mat-option>
-                            </mat-select>
-                        </mat-form-field>
-            
-                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline" *ngIf="!single_zone">
-                            <mat-label class="customMatLabel">Zone</mat-label>
-                            <mat-select [(ngModel)]="selected_z" formControlName="ZoneId" [disabled]="disable_zone"
-                                        (selectionChange)="changeZone($event)">
-                                <mat-option *ngFor="let zone of SelectedZones" [value]="zone?.ZoneId"
-                                            [disabled]="disable_zone">
-                                    {{zone?.ZoneName}}
-                                </mat-option>
-                            </mat-select>
-                        </mat-form-field>
+                        <div class="col-lg-6 kt-margin-bottom-20-mobile">
+                            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline"
+                                            *ngIf="single_zone">
+                                <mat-label class="customMatLabel">Zone</mat-label>
+                                <mat-select [(ngModel)]="selected_z" formControlName="ZoneId" [disabled]="disable_zone">
+                                    <mat-option [value]="SelectedZones?.ZoneId">
+                                        {{SelectedZones?.ZoneName}}
+                                    </mat-option>
+                                </mat-select>
+                            </mat-form-field>
+
+                            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline"
+                                            *ngIf="!single_zone">
+                                <mat-label class="customMatLabel">Zone</mat-label>
+                                <mat-select [(ngModel)]="selected_z" formControlName="ZoneId" [disabled]="disable_zone"
+                                            (selectionChange)="changeZone($event)">
+                                    <mat-option *ngFor="let zone of SelectedZones" [value]="zone?.ZoneId"
+                                                [disabled]="disable_zone">
+                                        {{zone?.ZoneName}}
+                                    </mat-option>
+                                </mat-select>
+                            </mat-form-field>
+                        </div>
+
+                        <div class="col-lg-6 kt-margin-bottom-20-mobile">
+                            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                                <mat-label class="customMatLabel">Branch <strong class="matMandatory">*</strong>
+                                </mat-label>
+
+                                <mat-select [(ngModel)]="selected_b" formControlName="BranchCode"
+                                            [disabled]="disable_branch"
+                                            *ngIf="single_branch">
+                                    <mat-option [value]="SelectedBranches?.BranchCode"
+                                    >
+                                        {{SelectedBranches?.Name}}
+                                    </mat-option>
+                                </mat-select>
+
+                                <mat-select [(ngModel)]="selected_b" formControlName="BranchCode"
+                                            [disabled]="disable_branch"
+                                            *ngIf="!single_branch">
+                                    <mat-option *ngFor="let branch of SelectedBranches" [value]="branch?.BranchCode"
+                                    >
+                                        {{branch?.Name}}
+                                    </mat-option>
+                                </mat-select>
+                            </mat-form-field>
+                        </div>
+
                     </div>
 
-                    <div class="col-lg-6 kt-margin-bottom-20-mobile">
-                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                            <mat-label class="customMatLabel">Branch <strong class="matMandatory">*</strong></mat-label>
-                            
-                            <mat-select [(ngModel)]="selected_b" formControlName="BranchCode" [disabled]="disable_branch"
-                                        *ngIf="single_branch">
-                                <mat-option [value]="SelectedBranches?.BranchCode"
-                                >
-                                    {{SelectedBranches?.Name}}
-                                </mat-option>
-                            </mat-select>
-            
-                            <mat-select [(ngModel)]="selected_b" formControlName="BranchCode" [disabled]="disable_branch"
-                                        *ngIf="!single_branch">
-                                <mat-option *ngFor="let branch of SelectedBranches" [value]="branch?.BranchCode"
-                                >
-                                    {{branch?.Name}}
-                                </mat-option>
-                            </mat-select>
-                        </mat-form-field>
+                    <div class="form-group kt-form__group row">
+
+                        <div class="col-lg-6 kt-margin-bottom-20-mobile">
+                            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                                <mat-label class="customMatLabel">Working Date (ddMMyyyy)</mat-label>
+                                <input matInput placeholder="Enter Working Date" formControlName="WorkingDate"
+                                       maxlength="8" autocomplete="off"
+                                       appNumberOnly/>
+                            </mat-form-field>
+                        </div>
+
+                        <div class="col-lg-6 kt-margin-bottom-20-mobile">
+                            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                                <mat-label class="customMatLabel">LC NO</mat-label>
+                                <input matInput placeholder="Enter LC NO" formControlName="LcNo" maxlength="30"
+                                       autocomplete="off" appNumberOnly/>
+                            </mat-form-field>
+                        </div>
+
                     </div>
-
-                  </div>
-
-                  <div class="form-group kt-form__group row">
-
-                      <div class="col-lg-6 kt-margin-bottom-20-mobile">
-                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                            <mat-label class="customMatLabel">Working Date (ddMMyyyy)</mat-label>
-                            <input matInput placeholder="Enter Working Date" formControlName="WorkingDate" maxlength="8" autocomplete="off"
-                                   appNumberOnly/>
-                        </mat-form-field>
-                      </div>
-
-                      <div class="col-lg-6 kt-margin-bottom-20-mobile">
-                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                            <mat-label class="customMatLabel">LC NO</mat-label>
-                            <input matInput placeholder="Enter LC NO" formControlName="LcNo" maxlength="30" autocomplete="off" appNumberOnly/>
-                        </mat-form-field>
-                      </div>
-
-                </div>
 
                     <div class="form-group kt-form__group row">
 
@@ -90,8 +98,9 @@
                             <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
                                 <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                     <mat-label class="customMatLabel">Circle</mat-label>
-                    
-                                    <mat-select [(ngModel)]="selected_c" formControlName="CircleId" [disabled]="disable_circle">
+
+                                    <mat-select [(ngModel)]="selected_c" formControlName="CircleId"
+                                                [disabled]="disable_circle">
                                         <mat-option *ngFor="let circle of SelectedCircles" [value]="circle?.Id"
                                         >
                                             {{circle?.CircleCode}}
@@ -102,17 +111,17 @@
                         </div>
                         <div class="col-lg-6 kt-margin-bottom-20-mobile">
                             <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
-                            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                <mat-label class="customMatLabel">Account Status<strong class="matMandatory">*</strong></mat-label>
-                                <mat-select formControlName="AccountStatus">
-                                    <!-- <mat-option *ngFor="let lov of vendorLov" [value]="lov.Value">
-                                        {{lov.Name}}
-                                    </mat-option> -->
-                                </mat-select>
-                            </mat-form-field>
+                                <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                                    <mat-label class="customMatLabel">Account Status<strong
+                                        class="matMandatory">*</strong></mat-label>
+                                    <mat-select formControlName="AccountStatus">
+                                        <!-- <mat-option *ngFor="let lov of vendorLov" [value]="lov.Value">
+                                            {{lov.Name}}
+                                        </mat-option> -->
+                                    </mat-select>
+                                </mat-form-field>
                             </div>
                         </div>
-
 
 
                     </div>
@@ -120,20 +129,25 @@
                     <div class="form-group kt-form__group row">
                         <div class="col-lg-6 kt-margin-bottom-20-mobile">
                             <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
-                            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                <mat-label class="customMatLabel">Account Status<strong class="matMandatory">*</strong></mat-label>
-                                <mat-select formControlName="AccountStatus">
-                                    <!-- <mat-option *ngFor="let lov of vendorLov" [value]="lov.Value">
-                                        {{lov.Name}}
-                                    </mat-option> -->
-                                </mat-select>
-                            </mat-form-field>
+                                <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                                    <mat-label class="customMatLabel">Account Status<strong
+                                        class="matMandatory">*</strong></mat-label>
+                                    <mat-select formControlName="AccountStatus">
+                                        <!-- <mat-option *ngFor="let lov of vendorLov" [value]="lov.Value">
+                                            {{lov.Name}}
+                                        </mat-option> -->
+                                    </mat-select>
+                                </mat-form-field>
                             </div>
                         </div>
 
                         <div class="col-lg-6 kt-margin-bottom-20-mobile">
                             <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
-                                <button class="mt-2" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" mat-raised-button color="primary" (click)="find()"><mat-icon class="mr-2">search</mat-icon> Find</button>
+                                <button class="mt-2" data-bs-toggle="collapse" data-bs-target="#collapseExample"
+                                        aria-expanded="false" mat-raised-button color="primary" (click)="find()">
+                                    <mat-icon class="mr-2">search</mat-icon>
+                                    Find
+                                </button>
                             </div>
                         </div>
 
@@ -148,13 +162,6 @@
 
     </form>
 
-    <div class="form-group kt-form__group row">
-        <div class="col-lg-12 kt-margin-bottom-20-mobile mat-table mt-3 d-flex justify-end">
-            
-            <button   class="mat-focus-indicator  btn bg-red-500 text-white rounded-md mat-raised-button mat-button-base mat-danger"(click)="close(0)"><mat-icon class="mr-2">close</mat-icon>Cancel</button>
-        </div>
-      </div>
-  
-  </div>
+</div>
 
 
