--- a/src/app/modules/reports/early-warning-reports/early-warning-reports.component.html
+++ b/src/app/modules/reports/early-warning-reports/early-warning-reports.component.html
@@ -101,7 +101,7 @@
 
                 </div>
 
-                <div class="row">
+                <!-- <div class="row">
 
                     <div class="col-lg-4 col-sm-12">
                         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
@@ -126,15 +126,15 @@
                         </div>
                     </div>
 
-                </div>
+                </div> -->
 
                 <div class="row">
                     <div class="col-lg-4 col-sm-12">
                         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
                             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                <mat-label class="customMatLabel">Father Name</mat-label>
-                                <input matInput placeholder="Enter Father Name" formControlName="FatherName"
-                                       maxlength="30" autocomplete="off"/>
+                                <mat-label class="customMatLabel">Days</mat-label>
+                                <input matInput placeholder="Enter No of Days" formControlName="days"
+                                       appNumberOnly maxlength="5" autocomplete="off"/>
                             </mat-form-field>
                         </div>
                     </div>
