--- a/src/app/modules/reports/reports/reports.component.html
+++ b/src/app/modules/reports/reports/reports.component.html
@@ -30,7 +30,7 @@
                     <search-loan-cases-by-cnic></search-loan-cases-by-cnic>
                 </mat-expansion-panel>
             </mat-accordion> -->
-            <mat-card class="cursor-pointer mx-4" id="llcInquiryText" routerLink="search-loan-case-by-cnic"><p>Search
+            <mat-card class="cursor-pointer mx-4" id="llcInquiryText" routerLink="search-loan-case-by-cnic" class="font-bold text-lg"><p>Search
                 Loan Cases by CNIC</p></mat-card>
         </div>
 
