--- a/src/app/modules/reports/fa-view-circle-wise/fa-view-circle-wise.component.html
+++ b/src/app/modules/reports/fa-view-circle-wise/fa-view-circle-wise.component.html
@@ -201,14 +201,14 @@
                     </mat-header-cell
                     >
                     <mat-cell *matCellDef="let report">{{
-                        report.Lcno
+                        report.LcNO
                         }}</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="Cnic">
                     <mat-header-cell *matHeaderCellDef>CNIC</mat-header-cell>
                     <mat-cell *matCellDef="let report">{{
-                        report.CNIC
+                        report.Cnic
                         }}</mat-cell>
                 </ng-container>
 
@@ -218,7 +218,7 @@
                     </mat-header-cell
                     >
                     <mat-cell *matCellDef="let report">{{
-                        report.Name
+                        report.CustomerName
                         }}</mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="FatherName">
@@ -231,37 +231,37 @@
                 <ng-container matColumnDef="Address">
                     <mat-header-cell *matHeaderCellDef>Address</mat-header-cell>
                     <mat-cell *matCellDef="let report">{{
-                        report.Address
+                        report.PermanetAddress
                         }}</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="Agps">
                     <mat-header-cell *matHeaderCellDef
-                    >AGPS
+                    >Major Borrower
                     </mat-header-cell
                     >
                     <mat-cell *matCellDef="let report">{{
-                        report.Agps
+                        report.MajorBorrower
                         }}</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="Bcl">
                     <mat-header-cell *matHeaderCellDef
-                    >Phone Number
+                    >Total Sanction Amount
                     </mat-header-cell
                     >
                     <mat-cell *matCellDef="let report">{{
-                        report.PhoneNumber
+                        report.TotalSanctionAmount
                         }}</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="Los">
                     <mat-header-cell *matHeaderCellDef
-                    >Phone Number
+                    >Loan Outstanding
                     </mat-header-cell
                     >
                     <mat-cell *matCellDef="let report">{{
-                        report.PhoneNumber
+                        report.LoanOutStanding
                         }}</mat-cell>
                 </ng-container>
 
