--- a/src/app/modules/reports/loan-amounts-convert-to-default/loan-amounts-convert-to-default.component.html
+++ b/src/app/modules/reports/loan-amounts-convert-to-default/loan-amounts-convert-to-default.component.html
@@ -192,7 +192,7 @@
                     </mat-header-cell
                     >
                     <mat-cell *matCellDef="let report">{{
-                        report.LoanCaseNo
+                        report.LcNO
                         }}</mat-cell>
                 </ng-container>
 
@@ -222,17 +222,17 @@
                 <ng-container matColumnDef="Address">
                     <mat-header-cell *matHeaderCellDef>Address</mat-header-cell>
                     <mat-cell *matCellDef="let report">{{
-                        report.Address
+                        report.PermanetAddress
                         }}</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="Agps">
                     <mat-header-cell *matHeaderCellDef
-                    >AGPS
+                    >Major Borrower
                     </mat-header-cell
                     >
                     <mat-cell *matCellDef="let report">{{
-                        report.Agps
+                        report.MajorBorrower
                         }}</mat-cell>
                 </ng-container>
 
@@ -242,7 +242,7 @@
                     </mat-header-cell
                     >
                     <mat-cell *matCellDef="let report">{{
-                        report.BorrowerCreditLimit
+                        report.SanctionLimit
                         }}</mat-cell>
                 </ng-container>
 
@@ -252,7 +252,7 @@
                     </mat-header-cell
                     >
                     <mat-cell *matCellDef="let report">{{
-                        report.LoanOutstanding
+                        report.LoanOutStanding
                         }}</mat-cell>
                 </ng-container>
 
