--- a/src/app/modules/user-management/users/circle-list/circle-list.component.html
+++ b/src/app/modules/user-management/users/circle-list/circle-list.component.html
@@ -8,8 +8,8 @@
     </div>
     <div class="col-lg-5 col-sm-12 self-center">
         <p class="text-right">
-          <button [routerLink]="['/user-management/viewCirclesfence']" class="mr-4 bg-gray-500 rounded-md text-white" mat-flat-button >
-            <mat-icon class="mr-2">visibility</mat-icon>View Map
+          <button [routerLink]="['/user-management/viewCirclesfence']" class="mr-4 bg-gray-500 py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary rounded-md text-white"  >
+            <mat-icon class="mr-2 text-white">visibility</mat-icon>View Map
           </button>
           <button class="  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button" color="primary" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
                 <mat-icon class="mr-2">filter_list</mat-icon> Advance Filter
