--- a/src/app/modules/customer/customer-profile/customer-profile.component.html
+++ b/src/app/modules/customer/customer-profile/customer-profile.component.html
@@ -788,24 +788,23 @@
 
 
     </div>
-    <div class="kt-portlet__foot kt-portlet__foot--fit kt-portlet__no-border"
-         style="margin-right:30px;">
+    <div class="kt-portlet__foot kt-portlet__foot--fit mt-2 kt-portlet__no-border">
         <div class="kt-form__actions kt-form__actions--solid">
             <div class="row text-right">
                 <div class="col-lg-12" *ngIf="HideShowSaveButton">
                     <!--<button type="button" class="button-red pull-left" mat-raised-button cdkFocusInitial>
                       Cancel
                     </button>-->
-                    <button type="button" class="btn btn-primary" mat-raised-button color="primary"
-                            (click)="onSubmit(true)" [disabled]="viewLoading || submitted">
-                        Submit
-                    </button>
 
+                    <button type="button" class="btn btn-primary bg-green" mat-raised-button color="primary"
+                            (click)="onSubmit(false)" [disabled]="viewLoading || submitted">
+                            <mat-icon class="mr-2">save</mat-icon> Save
+                    </button>
 
                     &nbsp;
                     <button type="button" class="btn btn-primary" mat-raised-button color="primary"
-                            (click)="onSubmit(false)" [disabled]="viewLoading || submitted">
-                        Save
+                            (click)="onSubmit(true)" [disabled]="viewLoading || submitted">
+                            <mat-icon class="mr-2">check_circle</mat-icon> Submit
                     </button>
                 </div>
             </div>
