--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -448,3 +448,9 @@ body.light .mat-flat-button.mat-primary, body.light .mat-raised-button.mat-prima
   color: red!important;
 }
 
+.mat-header-cell{
+  height: 56px;
+  align-self: center;
+}
+
+
