--- a/src/app/modules/reports/loan-amounts-convert-to-default/loan-amounts-convert-to-default.component.html
+++ b/src/app/modules/reports/loan-amounts-convert-to-default/loan-amounts-convert-to-default.component.html
@@ -89,7 +89,7 @@
 
                                 <mat-select [(ngModel)]="selected_b" formControlName="BranchCode"
                                             [disabled]="disable_branch"
-                                            *ngIf="!single_branch">
+                                            *ngIf="!single_branch" (selectionChange)="changeBranch($event)">
                                     <mat-option *ngFor="let branch of SelectedBranches" [value]="branch?.BranchCode"
                                     >
                                         {{branch?.Name}}
