--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -454,3 +454,11 @@ body.light .mat-flat-button.mat-primary, body.light .mat-raised-button.mat-prima
 }
 
 
+.row > * {
+  flex-shrink: 0;
+  width: 100%;
+  max-width: 100%;
+  padding-right: 20px;
+  padding-left: 20px;
+  margin-top: var(--bs-gutter-y);
+}
