--- a/src/app/modules/reports/fa-view-circle-wise/fa-view-circle-wise.component.html
+++ b/src/app/modules/reports/fa-view-circle-wise/fa-view-circle-wise.component.html
@@ -181,14 +181,7 @@
                 class="lmat-elevation-z8"
                 #table
                 [dataSource]="
-                    dataSource
-                        | paginate
-                            : {
-                                  itemsPerPage: itemsPerPage,
-                                  currentPage: pageIndex,
-                                  totalItems: totalItems
-                              }
-                "
+                    dataSource"
                 matSort
                 #sort1="matSort"
                 matSortActive="id"
@@ -280,40 +273,6 @@
             </div>
             <div class="mat-table__message" *ngIf="loading">
                 Please wait....
-            </div>
-
-            <div *ngIf="matTableLenght" class="mat-select" style="padding: 5px">
-                Items per page:
-                <mat-select
-                    display="inline"
-                    [(value)]="itemsPerPage"
-                    (valueChange)="paginate(1, $event)"
-                    style="
-                        width: 50px;
-                        margin-left: 15px;
-                        display: inline-block;
-                        margin-right: 10px;
-                    "
-                >
-                    <mat-option [value]="5">5</mat-option>
-                    <mat-option [value]="10">10</mat-option>
-                    <mat-option [value]="25">25</mat-option>
-                    <mat-option [value]="50">50</mat-option>
-                </mat-select>
-                <button (click)="paginate(1)">First</button>
-                <pagination-controls
-                    display="inline"
-                    (pageChange)="paginate($event)"
-                    style="display: inline-block"
-                ></pagination-controls>
-                <button
-                    (click)="paginate(Math.ceil(totalItems / itemsPerPage))"
-                >
-                    Last
-                </button>
-                <p style="float: right">
-                    Total <b>{{ totalItems }}</b> items
-                </p>
             </div>
         </div>
     </div>
