--- a/src/app/modules/reports/search-loan-cases-by-cnic/search-loan-cases-by-cnic.component.html
+++ b/src/app/modules/reports/search-loan-cases-by-cnic/search-loan-cases-by-cnic.component.html
@@ -167,12 +167,6 @@
                 #table
                 [dataSource]="
                     dataSource
-                        | paginate
-                            : {
-                                  itemsPerPage: itemsPerPage,
-                                  currentPage: pageIndex,
-                                  totalItems: totalItems
-                              }
                 "
                 matSort
                 #sort1="matSort"
@@ -236,7 +230,7 @@
                     </mat-header-cell
                     >
                     <mat-cell *matCellDef="let report">{{
-                        report.BorrowerCreditLimit
+                        report.TotalSanctionAmount
                         }}</mat-cell>
                 </ng-container>
 
@@ -267,39 +261,6 @@
                 Please wait....
             </div>
 
-            <div *ngIf="matTableLenght" class="mat-select" style="padding: 5px">
-                Items per page:
-                <mat-select
-                    display="inline"
-                    [(value)]="itemsPerPage"
-                    (valueChange)="paginate(1, $event)"
-                    style="
-                        width: 50px;
-                        margin-left: 15px;
-                        display: inline-block;
-                        margin-right: 10px;
-                    "
-                >
-                    <mat-option [value]="5">5</mat-option>
-                    <mat-option [value]="10">10</mat-option>
-                    <mat-option [value]="25">25</mat-option>
-                    <mat-option [value]="50">50</mat-option>
-                </mat-select>
-                <button (click)="paginate(1)">First</button>
-                <pagination-controls
-                    display="inline"
-                    (pageChange)="paginate($event)"
-                    style="display: inline-block"
-                ></pagination-controls>
-                <button
-                    (click)="paginate(Math.ceil(totalItems / itemsPerPage))"
-                >
-                    Last
-                </button>
-                <p style="float: right">
-                    Total <b>{{ totalItems }}</b> items
-                </p>
-            </div>
         </div>
     </div>
 </div>
