--- a/src/app/modules/reports/updated-list-of-defaulters/updated-list-of-defaulters.component.html
+++ b/src/app/modules/reports/updated-list-of-defaulters/updated-list-of-defaulters.component.html
@@ -173,12 +173,6 @@
                 #table
                 [dataSource]="
                     dataSource
-                        | paginate
-                            : {
-                                  itemsPerPage: itemsPerPage,
-                                  currentPage: pageIndex,
-                                  totalItems: totalItems
-                              }
                 "
                 matSort
                 #sort1="matSort"
@@ -273,7 +267,7 @@
                 Please wait....
             </div>
 
-            <div *ngIf="matTableLenght" class="mat-select" style="padding: 5px">
+            <!-- <div *ngIf="matTableLenght" class="mat-select" style="padding: 5px">
                 Items per page:
                 <mat-select
                     display="inline"
@@ -305,7 +299,7 @@
                 <p style="float: right">
                     Total <b>{{ totalItems }}</b> items
                 </p>
-            </div>
+            </div> -->
         </div>
     </div>
 </div>
